# terraform-project

./: .gitignore  Dockerfile  README.md  main.py  main.tf  provider.tf  pyproject.toml  variable.tf
src/: get_api_key.py  main.py  mistral_api.py
